# QQMusicMonitor

./: .gitignore  CLAUDE.md  Cargo.toml  Project.md  README.md  build.rs  config.toml  package-lock.json  package.json
.agent/rules/: AGENTS.md
.claude/: AGENTS.md  settings.local.json
WebDemo/: app.js  index.html  style.css
frontend/: index.html
frontend/css/: base.css  components.css  layout.css  responsive.css  settings.css  tokens.css
frontend/src/: index.js
frontend/src/config/: backend-config.js  frontend-config.js
frontend/src/connection/: tauri-bridge.js  ws.js
frontend/src/lyrics/: builder.js  translation.js
frontend/src/render/: render-loop.js
frontend/src/settings/: settings-ui.js
frontend/src/state/: state.js  update-handler.js
frontend/src/utils/: dom.js  format.js
src/: cli.rs  config.rs  local_qrc.rs  lyrics.rs  main.rs  memory.rs  process.rs  qrc.rs  server.rs  smtc.rs  song_info.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cli.rs  config.rs  local_qrc.rs  lyrics.rs  main.rs  qrc.rs  server.rs  smtc.rs  song_info.rs
