[package]
name = "qqmusic-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# 添加用于操作Windows进程的依赖
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "memoryapi",
    "tlhelp32",
    "winnt",
    "handleapi",
    "psapi",
    "libloaderapi",
    "sysinfoapi"
]}
ntapi = "0.4.0"
widestring = "1.0"
crossterm = "0.27"
chrono = "0.4"
ctrlc = "3.4"
regex = "1.0"
