[package]
name = "qqmusic-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# 添加用于操作Windows进程的依赖
# (已移除 legacy winapi 依赖，现在使用 windows crate)
widestring = "1.0"
crossterm = "0.27"
chrono = "0.4"
ctrlc = "3.4"
regex = "1.0"
windows = { version = "0.62.2", features = ["Media_Control", "Foundation", "Storage_Streams"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
base64 = "0.22.1"
des = "0.8.1"
flate2 = "1.1.9"
block-modes = "0.9.1"
ecb = "0.1.2"
xmltree = "0.12.0"
hex = "0.4.3"

[build-dependencies]
cc = "1.0"
