[package]
name = "qqmusic-monitor"
version = "0.1.0"
description = "A Tauri App for monitoring QQMusic info"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"



[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
cc = "1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
widestring = "1.0"
crossterm = "0.27"
chrono = "0.4"
ctrlc = "3.4"
regex = "1.0"
windows = { version = "0.62.2", features = ["Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
base64 = "0.22.1"
des = "0.8.1"
flate2 = "1.1.9"
block-modes = "0.9.1"
ecb = "0.1.2"
xmltree = "0.12.0"
hex = "0.4.3"
